; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_debugfs.c_i915_guc_log_relay_open.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/extr_i915_debugfs.c_i915_guc_log_relay_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { %struct.drm_i915_private* }
%struct.drm_i915_private = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.intel_guc }
%struct.intel_guc = type { %struct.intel_guc_log }
%struct.intel_guc_log = type { i32 }
%struct.file = type { %struct.intel_guc_log* }

@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @i915_guc_log_relay_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i915_guc_log_relay_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca %struct.drm_i915_private*, align 8
  %7 = alloca %struct.intel_guc*, align 8
  %8 = alloca %struct.intel_guc_log*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %9 = load %struct.inode*, %struct.inode** %4, align 8
  %10 = getelementptr inbounds %struct.inode, %struct.inode* %9, i32 0, i32 0
  %11 = load %struct.drm_i915_private*, %struct.drm_i915_private** %10, align 8
  store %struct.drm_i915_private* %11, %struct.drm_i915_private** %6, align 8
  %12 = load %struct.drm_i915_private*, %struct.drm_i915_private** %6, align 8
  %13 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  store %struct.intel_guc* %15, %struct.intel_guc** %7, align 8
  %16 = load %struct.intel_guc*, %struct.intel_guc** %7, align 8
  %17 = getelementptr inbounds %struct.intel_guc, %struct.intel_guc* %16, i32 0, i32 0
  store %struct.intel_guc_log* %17, %struct.intel_guc_log** %8, align 8
  %18 = load %struct.intel_guc*, %struct.intel_guc** %7, align 8
  %19 = call i32 @intel_guc_is_running(%struct.intel_guc* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %24, label %21

21:                                               ; preds = %2
  %22 = load i32, i32* @ENODEV, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %3, align 4
  br label %30

24:                                               ; preds = %2
  %25 = load %struct.intel_guc_log*, %struct.intel_guc_log** %8, align 8
  %26 = load %struct.file*, %struct.file** %5, align 8
  %27 = getelementptr inbounds %struct.file, %struct.file* %26, i32 0, i32 0
  store %struct.intel_guc_log* %25, %struct.intel_guc_log** %27, align 8
  %28 = load %struct.intel_guc_log*, %struct.intel_guc_log** %8, align 8
  %29 = call i32 @intel_guc_log_relay_open(%struct.intel_guc_log* %28)
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %24, %21
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @intel_guc_is_running(%struct.intel_guc*) #1

declare dso_local i32 @intel_guc_log_relay_open(%struct.intel_guc_log*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
